# Projet-PRS

./: .gitignore  CMakeLists.txt  README.md  client1  client2
PerformancesRadicalementSuperieures/src/: makefile  serveur1-PerformancesRadicalementSuperieures.c  serveur2-PerformancesRadicalementSuperieures.c  serveur3-PerformancesRadicalementSuperieures.c  socket.c
src/: makefile  run.sh  serveur1-PerformancesRadicalementSuperieures.c  serveur1-PerformancesRadicalementSuperieures.h  serveur2-PerformancesRadicalementSuperieures.c  serveur2-PerformancesRadicalementSuperieures.h  serveur3-PerformancesRadicalementSuperieures.c  serveur3-PerformancesRadicalementSuperieures.h  socket.c  socket.h
